# agora

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.code  README.md  SETUP.md  agent.yaml  agora.sh  broker.py  broker_client.sh  docker-compose.yml  fhcbp5utpfpaeqknqs1rorrvhlghh9kd.darc  launcher.py  manifest  mind.py  pyproject.toml  run.sh  setup.sh
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: post-merge  pre-commit
agent/: .env.example  CLAUDE.md  agent.py  agent.yaml  entrypoint.sh  mind.py
agora/: __init__.py  bot.py  chunker.py  cli.py  config.py  context.py  errors.py  events.py  gateway.py  message.py  registry.py  safety.py  scheduler.py  telemetry.py  voice.py
agora/templates/: __init__.py  manifest.json
debug/: 2026-04-04-first-live-test.md
docs/: agora-containerization-proposal.md
docs/system_design/: design-journal.md  landscape-synthesis.md  phase1-implementation-plan.md  phase2-implementation-plan.md  phase3-implementation-plan.md  scope.md  system-design.md
examples/: echo_agent.py  keyword_agent.py
examples/broken_calc/: README.md  calc.py  test_calc.py
testbed/: README.md  run.py  test_conversation.py  testbed.sh
tests/: test_bot_unit.py  test_chunker.py  test_cli.py  test_config.py  test_context.py  test_deprecation.py  test_dm.py  test_errors.py  test_events.py  test_execution_context.py  test_fleet.py  test_lifecycle.py  test_mention_resolution.py  test_message.py  test_safety.py  test_scheduler.py  test_send_reply.py  test_telemetry.py  test_voice.py  test_worktree.py
(+41 files in other folders)
