[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agora"
version = "0.1.0"
description = "A Python library for adding AI agents to shared Discord servers"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.7,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["agora*"]

[tool.setuptools.package-data]
"agora.templates" = ["**/*"]

[project.scripts]
agora = "agora.cli:main"
